# mini-bank-frontend

./: Cargo.toml  README.md  index.html
assets/styles/: main.scss
src/: main.rs
