[package]
name = "mini-bank-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Rust Nairobi Developers"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8.0-beta.5"
sycamore-router = "0.8.0-beta.5"
wee_alloc = "0.4.5"
